# BECAS

./: AGENTS.md  Cargo.toml  DOCS.md  PATENT_DISCLOSURE.md  README.md
becas-api/: Cargo.toml
becas-api/src/: lib.rs
becas-api/src/cluster/: mod.rs
becas-api/src/dashboard/: mod.rs
becas-api/src/websocket/: mod.rs
becas-cli/: Cargo.toml
becas-cli/src/: main.rs
becas-cli/src/tui/: app.rs  event.rs  mod.rs  ui.rs
becas-core/: Cargo.toml
becas-core/src/: lib.rs
becas-core/src/access/: mod.rs
becas-core/src/crypto/: mod.rs
becas-core/src/detect/: mod.rs
becas-core/src/gateway/: mod.rs
becas-core/src/marketplace/: mod.rs
becas-core/src/monitor/: mod.rs
becas-core/src/persistence/: mod.rs
becas-core/src/plugin/: mod.rs
becas-core/src/resource/: mod.rs
becas-core/src/sandbox/: mod.rs
becas-core/src/service/: mod.rs
becas-gui/: dashboard  dashboard.ao
becas-gui/web/: index.html
becas-net/: Cargo.toml
becas-net/src/: lib.rs
becas-net/src/discovery/: mod.rs
becas-net/src/endpoint/: mod.rs
becas-net/src/mesh/: mod.rs
becas-net/src/proxy/: mod.rs
becas-net/src/queue/: mod.rs
becas-net/src/relay/: mod.rs
becas-net/src/stun/: mod.rs
becas-net/src/tunnel/: cloudflare.rs  mod.rs
becas-shield/: Cargo.toml
becas-shield/src/: lib.rs
becas-shield/src/anomaly/: mod.rs
becas-shield/src/audit/: mod.rs
becas-shield/src/firewall/: mod.rs
