[package]
name = "becas-net"
version.workspace = true
edition.workspace = true
description = "BECAS Net — Tunnel, NAT Traversal, Endpoint, Queue, STUN/TURN, Discovery"

[dependencies]
becas-core = { path = "../becas-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
tokio-util = { version = "0.7", features = ["io"] }
rand = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
