[package]
name = "becas-shield"
version.workspace = true
edition.workspace = true
description = "BECAS Shield — Anomaly Detection, DDoS Protection, Audit Logger"

[dependencies]
becas-core = { path = "../becas-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
